--- a/KbsyncTweak.plist
+++ b/KbsyncTweak.plist
@@ -1,4 +1,3 @@
 { Filter = {
-    Bundles = ( "com.apple.AppStore" );
-    Executables = ( "itunesstored", "appstored" );
+    Executables = ( "itunesstored" );
     }; }
